--- a/index.html
+++ b/index.html
@@ -31,20 +31,19 @@
       <body class="full-image">
         <div class="container-fluid">
           <div class="row">
+
             <!-- left column -->
-            <div class="col-sm-8 ">
-              
+            <div class="col-sm-6">
+            <img src="/img/remote-logo.png" width="200" height="200">
             </div>
             <!-- right column -->
-            <div class="col-sm-4">
-            </br>
+            <div class="col-sm-5">
             <div class="content">
                 <h1>Send documents to remote employees optimised for their smartphones.</h1>
                 <h2>Integrate surveys to get employee and customer insights.</h2>
-              <div style="text-align:center;">
+              <div style="text-align:left;">
               </br>
-            <h3><strong>Launching soon.</strong></h3> 
-            <p>Sign up to join the free trial and qualify for lifetime discounts.</p>
+            <p>Sign up to register for the free trial.</p>
           <form class="form-inline" role="form" id="mc-form">
             <div class="form-group">
               <input type="email" class="form-control" id="mc-email" placeholder="Enter your email">
