logo position adjust.

--- a/index.html
+++ b/index.html
@@ -34,16 +34,21 @@
 
             <!-- left column -->
             <div class="col-sm-6">
-            <img src="/img/remote-logo.png" width="200" height="200">
             </div>
             <!-- right column -->
             <div class="col-sm-5">
+
+
             <div class="content">
                 <h1>Send documents to remote employees optimised for their smartphones.</h1>
                 <h2>Integrate surveys to get employee and customer insights.</h2>
               <div style="text-align:left;">
+                <img class="logo-image" src="http://remoteo.github.io/home/img/remote-logo.png" width="150" height="150" >
               </br>
+
+
             <p>Sign up to register for the free trial.</p>
+
           <form class="form-inline" role="form" id="mc-form">
             <div class="form-group">
               <input type="email" class="form-control" id="mc-email" placeholder="Enter your email">
@@ -53,7 +58,11 @@
           </form>
               </div>
 
+
+
+
             </div>
+
 
 
 
