--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -35,37 +36,31 @@
             <!-- left column -->
             <div class="col-sm-6">
             </div>
+
             <!-- right column -->
             <div class="col-sm-5">
-
-
-            <div class="content">
+              <div class="content">
                 <h1>Send documents to remote employees optimised for their smartphones.</h1>
                 <h2>Integrate surveys to get employee and customer insights.</h2>
-              <div style="text-align:left;">
-                <img class="logo-image" src="http://remoteo.github.io/home/img/remote-logo.png" width="150" height="150" >
-              </br>
+                <p>Sign up to register for the free trial.</p>
 
+                <div style="margin-top:10px; text-align:center">
+                  <img class="logo-image" src="http://remoteo.github.io/home/img/remote-logo.png">
+                </div>
 
-            <p>Sign up to register for the free trial.</p>
+                <div>
+                  <form class="form-inline" role="form" id="mc-form">
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="mc-email" placeholder="Enter your email">
+                    </div>
+                    <button class="btn btn-success" type="submit">GO</button>
+                    <label class='mc-label'for="mc-email"></label>
+                  </form>
+                  </br>
+                </div>
 
-          <form class="form-inline" role="form" id="mc-form">
-            <div class="form-group">
-              <input type="email" class="form-control" id="mc-email" placeholder="Enter your email">
-            </div>
-            <button class="btn btn-success" type="submit">GO</button>
-            <label class='mc-label'for="mc-email"></label>
-          </form>
               </div>
-
-
-
-
             </div>
-
-
-
-
         </div>
       </div>
     </div>
