--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <div class="content">
                 <h1>Send documents to remote employees optimised for their smartphones.</h1>
                 <h2>Integrate surveys to get employee and customer insights.</h2>
+                <p>Launching soon.</p>
                 <p>Sign up to register for the free trial.</p>
 
                 <div style="margin-top:10px; text-align:center">
@@ -56,7 +57,6 @@
                     <button class="btn btn-success" type="submit">GO</button>
                     <label class='mc-label'for="mc-email"></label>
                   </form>
-                  </br>
                 </div>
 
               </div>
