fix for mailchimp

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script src="js/jquery.ajaxchimp.js"></script>
     <script type="text/javascript">
     $('#mc-form').ajaxChimp({
-      url: 'http://hackerloop.us4.list-manage.com/subscribe/post?u=b2b611fc35a2a6b701e809d1d&amp;id=062f09799d'
+      url: 'http://glisser.us8.list-manage.com/subscribe/post?u=b2b611fc35a2a6b701e809d1d&amp;id=062f09799d'
     });
     </script>
     <script type="text/javascript" src="js/global.js"></script>
