--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script src="js/jquery.ajaxchimp.js"></script>
     <script type="text/javascript">
     $('#mc-form').ajaxChimp({
-      url: 'http://glisser.us8.list-manage.com/subscribe/post?u=b2b611fc35a2a6b701e809d1d&amp;id=062f09799d'
+      url: 'http://github.us11.list-manage.com/subscribe/post?u=4b7e17ec979a48fefda9c549a&amp;id=3fe948552f'
     });
     </script>
     <script type="text/javascript" src="js/global.js"></script>
